Fix image overlapping text on smaller screen widths

--- a/plugins/CoreHome/stylesheets/promo.less
+++ b/plugins/CoreHome/stylesheets/promo.less
@@ -1,6 +1,6 @@
 #piwik-promo-thumbnail {
     width: 100%;
-    height: 178px;
+    min-height: 178px;
     margin: 0 auto 0 auto;
 }
 
